# GitHub-Vector

./: CMakeLists.txt  README.md
src/: data.cpp  data.h  fileIO.cpp  fileIO.h  main.cpp  unitTest.cpp  unitTest.h  vecMath.h
